# hands-free

./: .env  .env.example  .env.handsfree  .env.web  .gitignore  AGGREGATOR_DASHBOARD_EMBEDDING.md  AGGREGATOR_QUICK_START.md  AUTH_IMPLEMENTATION_STATUS.md  App.tsx  BACKEND_INTEGRATION.md  DASHBOARD_EMBEDDING_TROUBLESHOOTING.md  IMPLEMENTATION_COMPLETE.md  LOGIN_CREDENTIALS.md  POS_INTEGRATION_PLAN.md  README.md  RESTAURANT_SETUP_FLOW.md  TAURI_BUILD_CHECKLIST.md  TESTING_GUIDE.md  WEBSOCKET_INTEGRATION.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  schema.sql  tsconfig.web.json  types.ts  vite.config.ts  vite.config.web.ts  wrangler.toml
.github/workflows/: build-windows.yml
cloudflare/: _headers  _redirects
components/: AudioVisualizer.tsx  CookieConsent.tsx  DownloadCard.tsx  Footer.tsx  GlassCard.tsx  LanguageSelector.tsx  PhoneInterface.tsx
components/restaurant/: BentoGrid.tsx  Carousel3D.tsx  DeviceMockup.tsx  FeatureEcosystem.tsx  HowItWorks.tsx  POSShowcase.tsx  ProductShowcase.tsx  TemplateCard.tsx  TemplateShowcase.tsx  VoiceShowcase.tsx  WaitlistModal.tsx  index.ts
dist-web/: index.html
dist-web/assets/: chart-vendor-BRbWPhmg.js  chart-vendor-BRbWPhmg.js.map  index-Bis01Ap_.css  index-SBVGSwUF.js  index-SBVGSwUF.js.map  react-vendor-fCM-a2-c.js  react-vendor-fCM-a2-c.js.map  ui-vendor-1djnaHAN.js  ui-vendor-1djnaHAN.js.map
dist-web/sounds/: README.md
docs/: cloudflare-worker-sales-endpoints.ts
functions/: _middleware.ts
functions/api/: download-access.ts  waitlist.ts
lan-server/: README.md  database.ts  index.ts  package.json  restaurant.sqlite  types.ts
lan-server/public/: index.html
pages/: Contact.tsx  Cookies.tsx  DownloadGatePage.tsx  DownloadsPage.tsx  HomePage.tsx  PartnersPage.tsx  Privacy.tsx  Terms.tsx
pages/restaurant/: RestaurantHomePage.tsx  index.ts
public/: _headers  robots.txt  sitemap.xml
services/: geminiService.ts
src/: App.tsx  App.web.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.ios.plist  build.rs  dashboard-wrapper.html  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: dashboards.json  default.json
src-tauri/configs/: aggregator_selectors.json
src-tauri/migrations/: 001_staff_users.sql  002_table_sessions.sql  003_aggregator_orders.sql  004_table_session_kot_records.sql  005_kds_orders.sql  006_sales_transactions.sql  007_daily_cash_registers.sql  008_remove_demo_users.sql  009_cash_payouts.sql  010_inventory.sql  011_aggregator_picked_up.sql  012_aggregator_archived.sql  013_out_of_stock.sql  014_sales_sync.sql  015_order_mappings.sql
src-tauri/scripts/: universal_extractor.js
src-tauri/src/: config.rs  dashboard_manager.rs  database.rs  lib.rs
src-tauri/src/commands/: auth.rs  mod.rs  print_service.rs  printer.rs  staff_auth.rs
src-tauri/src/database/: encrypted.rs  mod.rs
src-tauri/src/lan_sync/: client.rs  mod.rs  server.rs  types.rs
src-tauri/src/network/: auth_worker.rs  mod.rs
src-tauri/src/print_service/: mod.rs
src-tauri/src/storage/: mod.rs  secure.rs
src/components/: LockedModeGuard.tsx  WebSocketManager.tsx
src/config/: demoRestaurants.ts  features.ts  templates.ts  vad.ts
src/contexts/: LocaleContext.tsx  TrainingAssistantContext.tsx
src/hooks/: usePOSWebSocket.ts  useScreenSize.ts  useTheme.ts  useVoiceOrdering.ts  useWebSocket.ts
src/lib/: aggregatorOrderDb.ts  aggregatorSalesService.ts  aggregatorSyncService.ts  analyticsDb.ts  backendApi.ts  billService.ts  cashPayoutService.ts  cashRegisterService.ts  categoryMapper.ts  comboService.ts  database.ts  databaseBackup.ts  databaseMigration.ts  databaseReset.ts  dineInPricingService.ts  guestOrderApi.ts  handsfreeApi.ts  initialSyncService.ts  inventoryService.ts  kdsOrderService.ts  lanClient.ts  lanSyncService.ts  mdnsPrintService.ts  (+22 more)
(+232 files in other folders)
