[package]
name = "restaurant-pos-ai"
version = "0.1.0"
description = "AI-First Restaurant POS System"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Authentication & Security
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.5", features = ["rand_core"] }
rand = "0.8"
ring = "0.17"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"

# LAN Sync (POS ↔ KDS/BDS)
mdns-sd = "0.11"
tokio-tungstenite = "0.24"
futures-util = "0.3"
local-ip-address = "0.6"
once_cell = "1.19"
hostname = "0.4"

# Desktop-only dependencies (keyring not supported on Android)
[target.'cfg(not(target_os = "android"))'.dependencies]
keyring = "2.3"

# Security: String encryption for sensitive data
[dependencies.obfstr]
version = "0.4"

# Security: AES-GCM encryption for configs
[dependencies.aes-gcm]
version = "0.10"

# Security: SQLCipher encrypted database
# Used for encrypting sensitive data at rest
[dependencies.rusqlite]
version = "0.31"
features = ["bundled-sqlcipher"]

# Release profile optimizations for security
[profile.release]
opt-level = 3           # Maximum optimization
lto = "fat"             # Full link-time optimization (better dead code elimination)
codegen-units = 1       # Single codegen unit for better optimization
panic = "abort"         # Abort on panic (smaller binary, no unwind info for attackers)
strip = "symbols"       # Strip debug symbols
debug = false           # No debug info

[profile.release.build-override]
opt-level = 3

